# incremental

./: .gitignore  CMakeLists.txt
include/: components.hpp  log.h  lua_wrapper.hpp  sfml.hpp  systems.hpp  util.hpp
src/: CMakeLists.txt  log.cpp  main.cpp  sfml.cpp  systems.cpp  util.cpp
tests/: CMakeLists.txt  systems_tests.cpp  test.cpp  util_tests.cpp
